[package]
name = "combadge"
version = "0.1.0"
authors = ["Dan Stoza <stoza@periapt.media>"]
edition = "2021"
description = "Combadge makes Rust Web Workers easy"
repository = "https://github.com/tavern-works/combadge"
license = "MIT"

[features]
default = ["log"]

[dependencies]
combadge_macros = { path = "./combadge_macros" }
log = { version = "0.4", optional = true }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Worker"]

[lints.clippy]
all = { level = "deny", priority = -2 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
