[package]
name = "combadge"
version = "0.2.1"
authors = ["Dan Stoza <stoza@periapt.media>"]
edition = "2021"
description = "Combadge makes Rust Web Workers easy"
repository = "https://github.com/tavern-works/combadge"
license = "MIT"

[features]
log = ["dep:log"]
experimental_shared_memory = []

[dependencies]
combadge_macros = { path = "./combadge_macros" }
futures = "0.3"
js-sys = "0.3"
log = { version = "0.4", optional = true }
serde = { version = "1" }
serde-wasm-bindgen = { version = "0.6" }
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "DedicatedWorkerGlobalScope",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "Worker",
]

[lints.clippy]
all = { level = "deny", priority = -2 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
