[package]
name = "combadge_macros"
version = "0.1.0"
authors = ["Dan Stoza <stoza@periapt.media>"]
edition = "2021"
description = "Macros for Combadge"
repository = "https://github.com/tavern-works/combadge"
license = "MIT"

[lib]
crate-type = ["proc-macro"]

[dependencies]
prettyplease = "0.2"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits", "full"]

[lints.clippy]
all = { level = "deny", priority = -2 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
